# HuhuEngine

./: .env  .gitignore  CMakeLists.txt  Makefile  a.out  build_engine.sh  build_shaders.sh  first_app.cpp  first_app.hpp  huhu_buffer.hpp  huhu_camera.cpp  huhu_camera.hpp  huhu_device.cpp  huhu_device.hpp  huhu_frame_info.hpp  huhu_game_object.hpp  huhu_model.cpp  huhu_model.hpp  huhu_pipeline.cpp  huhu_pipeline.hpp  huhu_renderer.hpp  huhu_swap_chain.cpp  huhu_swap_chain.hpp  huhu_utils.hpp  huhu_window.cpp  huhu_window.hpp  readme.md  shadercompile.sh  simple_render_system.cpp  simple_render_system.hpp
.VSCodeCounter/2024-02-21_19-24-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
src/: first_app.cpp  first_app.hpp  huhu_buffer.cpp  huhu_camera.hpp  huhu_descriptors.cpp  huhu_descriptors.hpp  huhu_device.cpp  huhu_frame_info.hpp  huhu_game_object.cpp  huhu_game_object.hpp  huhu_model.cpp  huhu_pipeline.cpp  huhu_pipeline.hpp  huhu_renderer.cpp  huhu_renderer.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp
src/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp
